--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.359.0",
+    "@aws-sdk/s3-presigned-post": "^3.359.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1404.0",
     "classnames": "^2.3.2",
     "next": "13.4.7",
     "postcss": "8.4.24",
@@ -20,5 +23,12 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@aws-sdk/signature-v4-crt": "^3.357.0",
+    "@types/formidable": "^2.0.6",
+    "aws-crt": "^1.15.18",
+    "encoding": "^0.1.13",
+    "formidable": "^3.4.0"
   }
 }
