--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.359.0",
     "@aws-sdk/s3-presigned-post": "^3.359.0",
+    "@aws-sdk/s3-request-presigner": "^3.360.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -19,14 +20,17 @@
     "classnames": "^2.3.2",
     "next": "13.4.7",
     "postcss": "8.4.24",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-masonry": "^2.1.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@aws-sdk/signature-v4-crt": "^3.357.0",
     "@types/formidable": "^2.0.6",
+    "@types/react-responsive-masonry": "^2.1.0",
     "aws-crt": "^1.15.18",
     "encoding": "^0.1.13",
     "formidable": "^3.4.0"
