--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "8.4.24",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-breakpoints-hook": "^0.1.2",
     "react-dom": "18.2.0",
     "react-responsive-masonry": "^2.1.7",
     "react-toastify": "^9.1.3",
