--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "aws-sdk": "^2.1404.0",
     "classnames": "^2.3.2",
+    "lightgallery": "^2.7.1",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "prop-types": "^15.8.1",
