--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@aws-sdk/client-s3": "^3.359.0",
     "@aws-sdk/s3-presigned-post": "^3.359.0",
     "@aws-sdk/s3-request-presigner": "^3.360.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
