--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googleapis/drive": "^8.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "aws-sdk": "^2.1404.0",
     "classnames": "^2.3.2",
+    "googleapis": "^123.0.0",
     "lightgallery": "^2.7.1",
     "next": "13.4.7",
     "postcss": "8.4.24",
