--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.1404.0",
     "classnames": "^2.3.2",
     "googleapis": "^123.0.0",
+    "gsap": "^3.12.2",
     "lightgallery": "^2.7.1",
     "next": "13.4.7",
     "postcss": "8.4.24",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-responsive-masonry": "^2.1.7",
     "react-toastify": "^9.1.3",
+    "sass": "^1.68.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
