--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googleapis/drive": "^8.0.0",
+    "@prisma/client": "^5.4.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "aws-sdk": "^2.1404.0",
     "classnames": "^2.3.2",
+    "cryptr": "^6.3.0",
     "googleapis": "^123.0.0",
     "lightgallery": "^2.7.2",
     "luxon": "^3.4.3",
@@ -36,7 +38,8 @@
     "sass": "^1.68.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@aws-sdk/signature-v4-crt": "^3.357.0",
@@ -47,6 +50,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "formidable": "^3.4.0"
+    "formidable": "^3.4.0",
+    "prisma": "^5.4.2"
   }
 }
