--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googleapis/drive": "^8.0.0",
     "@prisma/client": "^5.4.2",
-    "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
@@ -35,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-responsive-masonry": "^2.1.7",
     "react-toastify": "^9.1.3",
+    "remove": "^0.1.5",
     "sass": "^1.68.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
@@ -45,6 +45,7 @@
     "@aws-sdk/signature-v4-crt": "^3.357.0",
     "@types/formidable": "^2.0.6",
     "@types/luxon": "^3.3.2",
+    "@types/node": "^20.8.6",
     "@types/react-responsive-masonry": "^2.1.0",
     "aws-crt": "^1.15.18",
     "encoding": "^0.1.13",
