--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@aws-sdk/signature-v4-crt": "^3.357.0",
