--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googleapis/drive": "^8.0.0",
+    "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
@@ -24,13 +25,17 @@
     "aws-sdk": "^2.1404.0",
     "classnames": "^2.3.2",
     "cryptr": "^6.3.0",
+    "framer-motion": "^10.16.4",
     "googleapis": "^123.0.0",
     "lightgallery": "^2.7.2",
     "luxon": "^3.4.3",
     "next": "13.5.6",
     "postcss": "8.4.31",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.3",
+    "ramda": "^0.29.1",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-breakpoints-hook": "^0.1.2",
     "react-dom": "18.2.0",
     "react-responsive-masonry": "^2.1.7",
@@ -48,12 +53,17 @@
     "@types/formidable": "^2.0.6",
     "@types/luxon": "^3.3.2",
     "@types/node": "^20.8.6",
+    "@types/qrcode": "^1.5.4",
+    "@types/ramda": "^0.29.7",
     "@types/react-responsive-masonry": "^2.1.0",
+    "@vitejs/plugin-react": "^4.1.0",
     "aws-crt": "^1.15.18",
     "encoding": "^0.1.13",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
     "formidable": "^3.4.0",
-    "prisma": "^5.4.2"
+    "jsdom": "^22.1.0",
+    "prisma": "^5.4.2",
+    "vitest": "^0.34.6"
   }
 }
