--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@aws-sdk/signature-v4-crt": "^3.357.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.4.2",
     "@types/formidable": "^2.0.6",
     "@types/luxon": "^3.3.2",
     "@types/node": "^20.8.6",
