--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "plugins": ["prettier-plugin-tailwindcss"],
   "singleQuote": true,
-  "tabWidth": 4
+  "tabWidth": 4,
+  "tailwindFunctions":[
+    "classNames"
+  ]
 }
