--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "postinstall": "prisma generate",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.359.0",
@@ -56,13 +57,17 @@
     "@types/qrcode": "^1.5.4",
     "@types/ramda": "^0.29.7",
     "@types/react-responsive-masonry": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@vitejs/plugin-react": "^4.1.0",
     "aws-crt": "^1.15.18",
     "encoding": "^0.1.13",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-prettier": "^5.0.1",
     "formidable": "^3.4.0",
     "jsdom": "^22.1.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "prisma": "^5.4.2",
     "vitest": "^0.34.6"
   }
