--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "luxon": "^3.4.3",
     "next": "14.0.4",
     "postcss": "8.4.38",
+    "pretty-ms": "^9.0.0",
     "prop-types": "^15.8.1",
     "qrcode": "^1.5.3",
     "ramda": "^0.29.1",
