--- a/package.json
+++ b/package.json
@@ -1,75 +1,77 @@
 {
-  "name": "kiste-heiraten",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -H 0.0.0.0",
-    "build": "next build",
-    "postinstall": "prisma generate",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.359.0",
-    "@aws-sdk/s3-presigned-post": "^3.359.0",
-    "@aws-sdk/s3-request-presigner": "^3.360.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@googleapis/drive": "^8.0.0",
-    "@nextui-org/react": "^2.1.13",
-    "@prisma/client": "^5.4.2",
-    "@types/react": "18.2.78",
-    "@types/react-dom": "18.2.25",
-    "autoprefixer": "10.4.19",
-    "aws-sdk": "^2.1404.0",
-    "classnames": "^2.3.2",
-    "cryptr": "^6.3.0",
-    "framer-motion": "^10.16.4",
-    "googleapis": "^128.0.0",
-    "lightgallery": "^2.7.2",
-    "luxon": "^3.4.3",
-    "next": "14.2.4",
-    "postcss": "8.4.39",
-    "pretty-ms": "^9.0.0",
-    "prop-types": "^15.8.1",
-    "qrcode": "^1.5.3",
-    "ramda": "^0.29.1",
-    "react": "18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-breakpoints-hook": "^0.1.2",
-    "react-dom": "18.2.0",
-    "react-responsive-masonry": "^2.1.7",
-    "react-toastify": "^9.1.3",
-    "remove": "^0.1.5",
-    "sass": "^1.68.0",
-    "sharp": "^0.32.1",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.2.2",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@aws-sdk/signature-v4-crt": "^3.357.0",
-    "@types/formidable": "^3.0.0",
-    "@types/luxon": "^3.3.2",
-    "@types/node": "^20.8.6",
-    "@types/qrcode": "^1.5.4",
-    "@types/ramda": "^0.29.7",
-    "@types/react-responsive-masonry": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@vitejs/plugin-react": "^4.1.0",
-    "aws-crt": "^1.15.18",
-    "encoding": "^0.1.13",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4",
-    "eslint-plugin-prettier": "^5.0.1",
-    "formidable": "^3.4.0",
-    "jsdom": "^22.1.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.6.0",
-    "prisma": "^5.4.2",
-    "vitest": "^0.34.6"
-  }
+    "name": "kiste-heiraten",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -H 0.0.0.0",
+        "build": "next build",
+        "postinstall": "prisma generate",
+        "start": "next start",
+        "lint": "next lint",
+        "lint:fix": "next lint --fix",
+        "prettier": "prettier --write .",
+        "prettier:check": "prettier --check ."
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.359.0",
+        "@aws-sdk/s3-presigned-post": "^3.359.0",
+        "@aws-sdk/s3-request-presigner": "^3.360.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@googleapis/drive": "^8.0.0",
+        "@nextui-org/react": "^2.1.13",
+        "@prisma/client": "^5.4.2",
+        "@types/react": "18.2.78",
+        "@types/react-dom": "18.2.25",
+        "autoprefixer": "10.4.19",
+        "aws-sdk": "^2.1404.0",
+        "classnames": "^2.3.2",
+        "cryptr": "^6.3.0",
+        "framer-motion": "^10.16.4",
+        "googleapis": "^128.0.0",
+        "lightgallery": "^2.7.2",
+        "luxon": "^3.4.3",
+        "next": "14.2.4",
+        "postcss": "8.4.39",
+        "pretty-ms": "^9.0.0",
+        "prop-types": "^15.8.1",
+        "qrcode": "^1.5.3",
+        "ramda": "^0.29.1",
+        "react": "18.2.0",
+        "react-beautiful-dnd": "^13.1.1",
+        "react-breakpoints-hook": "^0.1.2",
+        "react-dom": "18.2.0",
+        "react-responsive-masonry": "^2.1.7",
+        "react-toastify": "^9.1.3",
+        "remove": "^0.1.5",
+        "sass": "^1.68.0",
+        "sharp": "^0.32.1",
+        "tailwindcss": "3.3.5",
+        "typescript": "5.2.2",
+        "uuid": "^9.0.1",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@aws-sdk/signature-v4-crt": "^3.357.0",
+        "@types/formidable": "^3.0.0",
+        "@types/luxon": "^3.3.2",
+        "@types/node": "^20.8.6",
+        "@types/qrcode": "^1.5.4",
+        "@types/ramda": "^0.29.7",
+        "@types/react-responsive-masonry": "^2.1.0",
+        "@typescript-eslint/eslint-plugin": "^6.9.0",
+        "@vitejs/plugin-react": "^4.1.0",
+        "aws-crt": "^1.15.18",
+        "encoding": "^0.1.13",
+        "eslint": "8.57.0",
+        "eslint-config-next": "14.2.4",
+        "eslint-plugin-prettier": "^5.0.1",
+        "formidable": "^3.4.0",
+        "jsdom": "^22.1.0",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.6.0",
+        "prisma": "^5.4.2",
+        "vitest": "^0.34.6"
+    }
 }
