--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "postinstall": "prisma generate",
         "start": "next start",
         "lint": "next lint",
-        "lint:fix": "next lint --fix"
+        "lint:fix": "eslint --fix components/**/*.{ts,tsx}"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.359.0",
