--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "postinstall": "prisma generate",
         "start": "next start",
         "lint": "next lint",
-        "lint:fix": "eslint --fix components/**/*.{ts,tsx}"
+        "lint:fix": "next lint --fix"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.359.0",
@@ -67,6 +67,8 @@
         "eslint-plugin-prettier": "^5.0.1",
         "formidable": "^3.4.0",
         "jsdom": "^22.1.0",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.6.0",
         "prisma": "^5.4.2",
         "vitest": "^0.34.6"
     }
