--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "dev": "next dev -H 0.0.0.0",
         "build": "next build",
-        "postinstall": "prisma generate",
-        "start": "next start",
+        "prebuild": "prisma generate",
+        "start": "next start -H 0.0.0.0",
         "lint": "next lint",
         "lint:fix": "next lint --fix"
     },
