--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
         "cryptr": "^6.3.0",
         "framer-motion": "^10.16.4",
         "googleapis": "^128.0.0",
+        "heic-convert": "^2.1.0",
+        "heic2any": "^0.0.4",
         "lightgallery": "^2.7.2",
         "luxon": "^3.4.3",
         "next": "14.2.5",
+        "pica": "^9.0.1",
         "postcss": "8.4.39",
         "pretty-ms": "^9.0.0",
         "prop-types": "^15.8.1",
