--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@prisma/client": "^5.4.2",
         "@types/react": "18.2.78",
         "@types/react-dom": "18.2.25",
+        "accept-language-parser": "^1.5.0",
         "autoprefixer": "10.4.20",
         "aws-sdk": "^2.1404.0",
         "classnames": "^2.3.2",
@@ -32,9 +33,12 @@
         "googleapis": "^128.0.0",
         "heic-convert": "^2.1.0",
         "heic2any": "^0.0.4",
+        "i18next": "^23.14.0",
         "lightgallery": "^2.7.2",
         "luxon": "^3.4.3",
         "next": "14.2.6",
+        "next-i18next": "^15.3.1",
+        "next-intl": "^3.19.0",
         "pica": "^9.0.1",
         "postcss": "8.4.39",
         "pretty-ms": "^9.0.0",
@@ -45,6 +49,7 @@
         "react-beautiful-dnd": "^13.1.1",
         "react-breakpoints-hook": "^0.1.2",
         "react-dom": "18.2.0",
+        "react-i18next": "^15.0.1",
         "react-responsive-masonry": "^2.1.7",
         "react-toastify": "^9.1.3",
         "remove": "^0.1.5",
@@ -57,6 +62,7 @@
     },
     "devDependencies": {
         "@aws-sdk/signature-v4-crt": "^3.357.0",
+        "@types/accept-language-parser": "^1.5.6",
         "@types/formidable": "^3.0.0",
         "@types/luxon": "^3.3.2",
         "@types/node": "^20.8.6",
