--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "i18next": "^23.14.0",
         "lightgallery": "^2.7.2",
         "luxon": "^3.4.3",
+        "mitt": "^3.0.1",
         "next": "14.2.6",
         "next-i18next": "^15.3.1",
         "next-intl": "^3.19.0",
