--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "kiste-heiraten",
+    "name": "geburtstag-lena-mutter",
     "version": "0.1.0",
     "private": true,
     "scripts": {
