--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "@types/accept-language-parser": "^1.5.6",
         "@types/formidable": "^3.0.0",
         "@types/luxon": "^3.3.2",
+        "@types/mime-types": "^2.1.4",
         "@types/node": "^20.8.6",
         "@types/pica": "^9.0.4",
         "@types/qrcode": "^1.5.4",
