--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@googleapis/drive": "^8.0.0",
+        "@mantine/core": "^8.0.1",
+        "@mantine/dropzone": "^8.0.1",
+        "@mantine/hooks": "^8.0.1",
         "@nextui-org/react": "^2.1.13",
         "@nextui-org/switch": "^2.0.31",
         "@nextui-org/system": "^2.2.2",
         "@nextui-org/theme": "^2.2.6",
         "@prisma/client": "^5.4.2",
+        "@tabler/icons-react": "^3.33.0",
         "@types/react": "18.2.78",
         "@types/react-dom": "18.2.25",
         "accept-language-parser": "^1.5.0",
