--- a/package.json
+++ b/package.json
@@ -10,86 +10,84 @@
         "lint:fix": "next lint --fix"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.359.0",
-        "@aws-sdk/s3-presigned-post": "^3.359.0",
-        "@aws-sdk/s3-request-presigner": "^3.360.0",
-        "@fortawesome/fontawesome-svg-core": "^6.4.0",
-        "@fortawesome/free-solid-svg-icons": "^6.4.0",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "@googleapis/drive": "^8.0.0",
-        "@mantine/core": "^8.0.1",
-        "@mantine/dropzone": "^8.0.1",
-        "@mantine/hooks": "^8.0.1",
-        "@nextui-org/react": "^2.1.13",
-        "@nextui-org/switch": "^2.0.31",
-        "@nextui-org/system": "^2.2.2",
-        "@nextui-org/theme": "^2.2.6",
-        "@prisma/client": "^5.4.2",
-        "@tabler/icons-react": "^3.33.0",
-        "@types/react": "18.2.78",
-        "@types/react-dom": "18.2.25",
+        "@aws-sdk/client-s3": "^3.896.0",
+        "@aws-sdk/s3-presigned-post": "^3.896.0",
+        "@aws-sdk/s3-request-presigner": "^3.896.0",
+        "@fortawesome/fontawesome-svg-core": "^7.0.1",
+        "@fortawesome/free-solid-svg-icons": "^7.0.1",
+        "@fortawesome/react-fontawesome": "^3.0.2",
+        "@googleapis/drive": "^17.0.0",
+        "@heroui/react": "^2.6.11",
+        "@heroui/switch": "^2.2.8",
+        "@heroui/system": "^2.4.6",
+        "@heroui/theme": "^2.4.5",
+        "@mantine/core": "^8.3.2",
+        "@mantine/dropzone": "^8.3.2",
+        "@mantine/hooks": "^8.3.2",
+        "@prisma/client": "^6.16.2",
+        "@tabler/icons-react": "^3.35.0",
+        "@types/react": "19.1.14",
+        "@types/react-dom": "19.1.9",
         "accept-language-parser": "^1.5.0",
-        "autoprefixer": "10.4.20",
-        "aws-sdk": "^2.1404.0",
-        "classnames": "^2.3.2",
-        "cryptr": "^6.3.0",
-        "framer-motion": "^10.16.4",
-        "googleapis": "^128.0.0",
+        "autoprefixer": "10.4.21",
+        "aws-sdk": "^2.1692.0",
+        "classnames": "^2.5.1",
+        "cryptr": "^6.4.0",
+        "framer-motion": "^12.23.22",
+        "googleapis": "^160.0.0",
         "heic-convert": "^2.1.0",
         "heic2any": "^0.0.4",
-        "i18next": "^23.14.0",
+        "i18next": "^25.5.2",
         "jimp": "^1.6.0",
-        "lightgallery": "^2.7.2",
-        "luxon": "^3.4.3",
+        "lightgallery": "^2.8.3",
+        "luxon": "^3.7.2",
         "mitt": "^3.0.1",
-        "next": "14.2.6",
-        "next-i18next": "^15.3.1",
-        "next-intl": "^3.19.0",
+        "next": "15.5.4",
+        "next-i18next": "^15.4.2",
+        "next-intl": "^4.3.9",
         "pica": "^9.0.1",
-        "postcss": "8.4.39",
-        "pretty-ms": "^9.0.0",
+        "postcss": "8.5.6",
+        "pretty-ms": "^9.3.0",
         "prop-types": "^15.8.1",
-        "qrcode": "^1.5.3",
-        "ramda": "^0.30.0",
-        "react": "18.2.0",
-        "react-beautiful-dnd": "^13.1.1",
-        "react-breakpoints-hook": "^0.1.2",
-        "react-dom": "18.2.0",
-        "react-i18next": "^15.0.1",
-        "react-responsive-masonry": "^2.1.7",
-        "react-toastify": "^9.1.3",
+        "qrcode": "^1.5.4",
+        "ramda": "^0.31.3",
+        "react": "19.1.1",
+        "react-dom": "19.1.1",
+        "react-i18next": "^16.0.0",
+        "react-responsive-masonry": "^2.7.1",
+        "react-toastify": "^11.0.5",
         "remove": "^0.1.5",
-        "sass": "^1.68.0",
-        "sharp": "^0.32.6",
-        "tailwindcss": "3.4.4",
-        "typescript": "5.2.2",
-        "uuid": "^9.0.1",
-        "zod": "^3.22.4"
+        "sass": "^1.93.2",
+        "sharp": "^0.34.4",
+        "tailwindcss": "4.1.13",
+        "typescript": "5.9.2",
+        "uuid": "^13.0.0",
+        "zod": "^4.1.11"
     },
     "devDependencies": {
-        "@aws-sdk/signature-v4-crt": "^3.357.0",
-        "@types/accept-language-parser": "^1.5.6",
-        "@types/formidable": "^3.0.0",
-        "@types/luxon": "^3.3.2",
-        "@types/mime-types": "^2.1.4",
-        "@types/node": "^20.8.6",
-        "@types/pica": "^9.0.4",
-        "@types/qrcode": "^1.5.4",
-        "@types/ramda": "^0.30.0",
-        "@types/react-responsive-masonry": "^2.1.0",
-        "@types/uuid": "^10.0.0",
-        "@typescript-eslint/eslint-plugin": "^6.9.0",
-        "@vitejs/plugin-react": "^4.1.0",
-        "aws-crt": "^1.15.18",
+        "@aws-sdk/signature-v4-crt": "^3.896.0",
+        "@tailwindcss/postcss": "^4.1.13",
+        "@types/accept-language-parser": "^1.5.8",
+        "@types/formidable": "^3.4.5",
+        "@types/luxon": "^3.7.1",
+        "@types/mime-types": "^3.0.1",
+        "@types/node": "^24.5.2",
+        "@types/pica": "^9.0.5",
+        "@types/qrcode": "^1.5.5",
+        "@types/ramda": "^0.31.1",
+        "@types/react-responsive-masonry": "^2.6.0",
+        "@typescript-eslint/eslint-plugin": "^8.44.1",
+        "@vitejs/plugin-react": "^5.0.4",
+        "aws-crt": "^1.27.3",
         "encoding": "^0.1.13",
-        "eslint": "8.57.0",
-        "eslint-config-next": "14.2.6",
-        "eslint-plugin-prettier": "^5.0.1",
-        "formidable": "^3.4.0",
-        "jsdom": "^22.1.0",
-        "prettier": "^3.0.3",
-        "prettier-plugin-tailwindcss": "^0.6.0",
-        "prisma": "^5.4.2",
-        "vitest": "^0.34.6"
+        "eslint": "9.36.0",
+        "eslint-config-next": "15.5.4",
+        "eslint-plugin-prettier": "^5.5.4",
+        "formidable": "^3.5.4",
+        "jsdom": "^27.0.0",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "prisma": "^6.16.2",
+        "vitest": "^3.2.4"
     }
 }
